fix: alignment to emojis

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,9 @@ $azul_header: #2e7bcf; /*azul do tema em scss*/
 ul{
 	list-style: none;
 }
+img.emoji{
+	vertical-align: top;
+}
 
 
 /*header*/
